# ChronoStack

./: .czrc  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  temporal.cstack
chronostack/: __init__.py  interpreter.py  lexer.py  parser.py  repl.py  timeline.py
examples/: advanced_branching.cstack  fibonacci.cstack  multi_dimensional_time.cstack  palindrome.cstack  paradox_demo.cstack  quantum_coin.cstack  recursive_temporal.cstack  rule110.cstack  rule110_clean.cstack  rule110_simple.cstack  rule110_visual.cstack  self_fulfilling.cstack  temporal_debugging.cstack  time_loop.cstack
tests/: __init__.py  test_interpreter.py  test_lexer.py  test_parser.py  test_repl.py  test_timeline.py
